manifests/components/ingress/gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chatbot
spec:
  hostnames:
    - chatbot.agi.zjuici.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: istio-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2/
      backendRefs:
        - group: ""
          kind: Service
          name: oauth2-proxy
          port: 8080
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: chatbot
          port: 8000
          weight: 1
